--- a/senai-gpt-web-react/src/pages/chat/chat.css
+++ b/senai-gpt-web-react/src/pages/chat/chat.css
@@ -167,11 +167,13 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    height: 100vh;
+    height: 90vh;
     width: 80vw;
+    overflow: auto;
     padding-top: 20px;
     padding-left: 20px;
     padding-right: 20px;
+    padding-bottom: 20px;
 
 }
 
