--- a/senai-gpt-web-react/src/pages/chat/chat.css
+++ b/senai-gpt-web-react/src/pages/chat/chat.css
@@ -167,13 +167,15 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    height: 90vh;
     width: 80vw;
-    overflow: auto;
     padding-top: 20px;
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 20px;
+    
+    /* Para corrigir o bug que acontece quando há muitas mensagens no chat */
+    height: 90vh;
+    overflow: auto;
 
 }
 
