feat: atualizar URLs da API e adicionar links de navegação nas páginas de login e cadastro

--- a/senai-gpt-web-react/src/pages/new-user/new-user.css
+++ b/senai-gpt-web-react/src/pages/new-user/new-user.css
@@ -42,12 +42,12 @@ h1 {
 
 }
 
-.robo-image {
+.up-image {
 
-    background-image: url("../../assets/imgs/Rectangle 1.png");
-    background-size: cover;
+    background-image: url(/src/assets/imgs/up.jpg);
+    background-size: 175%;
+    background-position: 0% 81%;
     /* background-repeat: no-repeat; */
-
     width: 50vw;
     height: 100vh;
 
