--- a/senai-gpt-web-react/src/pages/chat/chat.css
+++ b/senai-gpt-web-react/src/pages/chat/chat.css
@@ -200,6 +200,7 @@
     padding: 20px;
     width: 300px;
     margin-left: auto;
+    margin-bottom: 20px;
 
 }
 
@@ -213,4 +214,69 @@
     color: white;
     background: #000;
 
+}
+
+.btn-toggle-panel {
+
+    display: none;
+
+}
+
+@media screen and (max-width: 768px) {
+
+    .left-panel {
+        display: none;
+    }
+    
+    .left-panel.open {
+        display: block;
+        position: fixed;
+        z-index: 2;
+        width: 100vw;
+        height: 100vh;
+        background-color: white;        
+    }
+
+    .central-panel {
+        width: 100vw;
+    }
+
+    .central-panel .chat-logo {
+        margin-top: 10vh;
+    }
+
+    .central-panel .chat-logo img {
+        width: 50vw;
+    }
+
+    .central-panel .dicas-container {
+        max-width: 90vw;
+    }
+
+    .top {
+        height: 70vh;
+    }
+
+    .chat-container {
+        width: 100vw;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .btn-toggle-panel {
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 50px;
+        height: 50px;
+        background-color: #F7F9FB;
+        border-radius: 100px;
+        position: fixed;
+        bottom: 45px;
+        right: 20px;        
+        border: 1px solid black;
+        z-index: 3;
+    }
+    
 }
