--- a/senai-gpt-web-react/src/pages/login/login.css
+++ b/senai-gpt-web-react/src/pages/login/login.css
@@ -52,3 +52,15 @@ h1 {
     height: 100vh;
 
 }
+
+@media screen and (max-width: 768px) {
+    
+    .login-container {
+        width: 100vw;
+    }
+
+    .robo-image {
+        display: none;
+    }
+    
+}
