--- a/senai-gpt-web-react/src/pages/chat/chat.css
+++ b/senai-gpt-web-react/src/pages/chat/chat.css
@@ -8,7 +8,7 @@
 
 .central-panel {
 
-    height: 100vh;
+    height: 100dvh;
     width: 80vw;
 
     display: flex;
@@ -176,7 +176,7 @@
     padding-bottom: 20px;
     
     /* Para corrigir o bug que acontece quando há muitas mensagens no chat */
-    height: 90vh;
+    height: 90dvh;
     overflow: auto;
 
 }
@@ -233,7 +233,7 @@
         position: fixed;
         z-index: 2;
         width: 100vw;
-        height: 100vh;
+        height: 100dvh;
         background-color: white;        
     }
 
@@ -277,6 +277,8 @@
         right: 20px;        
         border: 1px solid black;
         z-index: 3;
+        font-size: 1.5em;
+
     }
     
 }
