feat: adicionar cor e cursor pointer ao botão de toggle do painel

--- a/senai-gpt-web-react/src/pages/chat/chat.css
+++ b/senai-gpt-web-react/src/pages/chat/chat.css
@@ -278,6 +278,8 @@
         border: 1px solid black;
         z-index: 3;
         font-size: 1.5em;
+        color: black;
+        cursor: pointer;
 
     }
 
